objects/GDPR_Case_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>GDPR_Case_Follow_Up</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <label>Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Received_Date__c</fullName>
        <label>Response Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Received__c</fullName>
        <label>Response Received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Athena</fullName>
                </value>
                <value>
                    <fullName>G2Crowd</fullName>
                </value>
                <value>
                    <fullName>GleanIn</fullName>
                </value>
                <value>
                    <fullName>Influitive</fullName>
                </value>
                <value>
                    <fullName>Invoca</fullName>
                </value>
                <value>
                    <fullName>Ion Interactive</fullName>
                </value>
                <value>
                    <fullName>Kapost</fullName>
                </value>
                <value>
                    <fullName>Leadspace</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>LookBookHQ/Pathfactory</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Oktopost</fullName>
                </value>
                <value>
                    <fullName>ON24</fullName>
                </value>
                <value>
                    <fullName>PFL</fullName>
                </value>
                <value>
                    <fullName>Sendoso</fullName>
                </value>
                <value>
                    <fullName>Sigstr</fullName>
                </value>
                <value>
                    <fullName>Vidyard</fullName>
                </value>
                <value>
                    <fullName>Wistia</fullName>
                </value>
                <value>
                    <fullName>Amadeus</fullName>
                </value>
                <value>
                    <fullName>Birst</fullName>
                </value>
                <value>
                    <fullName>Full Contact</fullName>
                </value>
                <value>
                    <fullName>Twilio</fullName>
                </value>
                <value>
                    <fullName>Pubnub</fullName>
                </value>
                <value>
                    <fullName>SimpleView</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GDPR Case Follow Up</label>
    <nameField>
        <displayFormat>GDPRFollowUp-{00000}</displayFormat>
        <label>GDPR Case Follow Up	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDPR Case Follow Up</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>